# Making-MCP-Server-for-Excalidraw-and-Gmail

./: .gitignore  README.md  example2.py  example_mcp_server.py  gmail_client.py  main.py  pyproject.toml  talk2mcp.py  talk2paint.py
